--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 天诩的博客
 subtitle:
-description:
+description: 我像猫，但我喜欢狗
 keywords:
-author: John Doe
+author: 张天诩
 language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: 
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -91,3 +91,9 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
