--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: 
+url: https://zhang-tianxu.github.io/chinese/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -89,8 +89,8 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type:
+#deploy:
+#type:
 
 search:
   path: search.xml
