--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://zhang-tianxu.github.io/chinese/
-root: /
+root: /chinese/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
