--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,7 +97,7 @@ menu:
   tags: /tags/|| tags //标签
   categories: /categories/|| th // 目录
   archives: /archives/|| archive // 归档
-  schedule: /schedule/|| calendar //日历
+  #schedule: /schedule/|| calendar //日历
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
 
@@ -580,9 +580,9 @@ baidu_push: false
 # API Documentation:
 # https://developers.google.com/google-apps/calendar/v3/reference/events/list
 calendar:
-  enable: true
-  calendar_id: jeomr6ku7eb8v78rt58l39s0co@group.calendar.google.com
-  api_key: AIzaSyBDbYfv3Fie-srVETxcSxZ2Y9w3phKhNHA
+  enable: false
+  calendar_id: 
+  api_key: 
   orderBy: startTime
   offsetMax: 24
   offsetMin: 4
