--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
-  order_by: -date
+  per_page: 0
+  #order_by: -date
 
 # Category & Tag
 default_category: uncategorized
@@ -78,7 +78,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
