--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: node_js
 node_js:
   - 10 # use nodejs v10 LTS
+before_script:
+    - npm install hexo-generator-searchdb --save
 cache: npm
 branches:
   only:
