--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,13 @@ deploy:
   on:
     branch: master
   local-dir: public
+
+
+notifications:
+   email:
+     recipients:
+       - hanerzamora@gmail.com
+         #-
+     on_success: never # default: change
+     #on_success: change # default: change
+     on_failure: always # default: always
