--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - 10 # use nodejs v10 LTS
 before_script:
     - npm install hexo-generator-searchdb --save
+    - npm uninstall hexo-generator-index --save
+    - npm install hexo-generator-index-pin-top --save
 cache: npm
 branches:
   only:
