新型冠状病毒带来的思考

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 天诩的博客
+title: 七夕先生的无聊生活
 subtitle:
 description: 我像猫，但我喜欢狗
 keywords:
-author: 张天诩
+author: 七夕先生
 language: zh-Hans
 timezone:
 
