--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
     - npm install hexo-generator-searchdb --save
     - npm uninstall hexo-generator-index --save
     - npm install hexo-generator-index-pin-top --save
+    - npm install --save hexo-filter-flowchart
 cache: npm
 branches:
   only:
