每页显示博文数改为10

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - master
     paths:
+      - '_config.yml'
       - 'source/**'
       - '.github/workflows/**' # 修改workflows也需要触发
 
