--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,12 @@ jobs:
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           publish_dir: ./chinese/public
+
+      - name: push to gitlab
+        run: |
+          cd chinese
+          git fetch --unshallow https://github.com/Zhang-Tianxu/chinese.git
+          git remote remove origin
+          git init
+          git remote add origin https://${{ secrets.GITLAB_USERNAME }}:${{ secrets.GITLAB_PASSWORD }}@gitlab.com/tianxuzhang/chineseblog.git
+          git push -u origin master --force
